# cargo-ft

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_feature.md
.github/workflows/: ci.yml  pr.yml  release.yml
ci/: check.sh  fmt.sh
src/: cli.rs  color.rs  filter.rs  main.rs  package.rs
src/cli/: tests.rs
src/package/: metadata.rs
src/package/metadata/: tests.rs
workspace_example/: Cargo.toml
workspace_example/crates/cross/: Cargo.toml
workspace_example/crates/cross/src/: lib.rs
workspace_example/crates/desktop-a/: Cargo.toml
workspace_example/crates/desktop-b/: Cargo.toml
workspace_example/crates/desktop-b/src/: lib.rs
workspace_example/crates/linux/: Cargo.toml
workspace_example/crates/linux/src/: lib.rs
workspace_example/crates/mac/: Cargo.toml
workspace_example/crates/mac/src/: lib.rs
workspace_example/crates/wasm/: Cargo.toml
workspace_example/crates/wasm/src/: lib.rs
workspace_example/crates/windows/: Cargo.toml
workspace_example/crates/windows/src/: lib.rs
