[package]
name = "cargo-ft"
version = "0.1.3"
authors = ["Guillaume Dallenne <guillaume.dallenne@stormshield.eu>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
edition = "2021"
include = ["/src/", "/build.rs", "/LICENSE", "/NOTICE"]
keywords = ["cli", "cargo", "filter", "target"]
license = "Apache-2.0"
repository = "https://github.com/stormshield/cargo-ft"
rust-version = "1.72" # Sync this value with the CI workflow
description = "A cargo extension for specifying supported targets for a crate"

[dependencies]
anstream = "0.6.11"
anstyle = "1.0.6"
cargo-config2 = "0.1.18"
cargo_metadata = "0.18.1"
clap = { version = "4.4.18", features = ["derive"] }
clap-cargo = { version = "0.14.0", features = ["cargo_metadata"] }
error-stack = "0.4.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# Embark standard lints v6 for Rust 1.55+
# for more info see: <https://github.com/EmbarkStudios/rust-ecosystem/issues/59>
[lints.rust]
unsafe_code = "deny"
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
all = "warn"
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatched_target_os = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
